--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,9 +10,9 @@
 
   <body>
     <nav>
-      <%= link_to "Components", components_path %> |
       <%= link_to "Manufacturers", manufacturers_path %> |
-      <%= link_to "Prices", prices_path %> |
+      <%= link_to "Components", components_path %> |
+      <%= link_to "Prices", prices_path %>
     </nav>
     <p id="notice"><%= notice %></p>
     <%= yield %>
