--- a/app/views/prices/index.html.erb
+++ b/app/views/prices/index.html.erb
@@ -1,25 +1,27 @@
-
-
 <h1>Prices</h1>
 
-<table>
+<%= link_to 'New Price', new_price_path %>
+
+<table class="table">
   <thead>
     <tr>
       <th>Component</th>
       <th>Qty</th>
-      <th>Cost each</th>
-      <th>Shipping each</th>
-      <th colspan="3"></th>
+      <th>Cost Ea.</th>
+      <th>Shipping Ea.</th>
+      <th>Total Cost for Qty</th>
+      <th colspan="3">Actions</th>
     </tr>
   </thead>
 
   <tbody>
     <% @prices.each do |price| %>
       <tr>
-        <td><%= price.component %> (<%= price.component.manufacturer %>)</td>
+        <td><%= link_to price.component, component_path(price.component) %> (<%= price.component.manufacturer %>)</td>
         <td><%= price.qty %></td>
-        <td><%= price.cost_each %></td>
-        <td><%= price.shipping_each %></td>
+        <td><%= display_currency(price.cost_each) %></td>
+        <td><%= display_currency(price.shipping_each) %></td>
+        <td><%= display_currency(price.cost_for_qty) %></td>
         <td><%= link_to 'Show', price %></td>
         <td><%= link_to 'Edit', edit_price_path(price) %></td>
         <td><%= link_to 'Destroy', price, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -27,7 +29,3 @@
     <% end %>
   </tbody>
 </table>
-
-<br>
-
-<%= link_to 'New Price', new_price_path %>
