--- a/app/views/manufacturers/index.html.erb
+++ b/app/views/manufacturers/index.html.erb
@@ -2,7 +2,9 @@
 
 <h1>Manufacturers</h1>
 
-<table>
+<%= link_to 'New Manufacturer', new_manufacturer_path %>
+
+<table class="table">
   <thead>
     <tr>
       <th>Name</th>
@@ -26,4 +28,3 @@
 
 <br>
 
-<%= link_to 'New Manufacturer', new_manufacturer_path %>
