--- a/app/views/components/index.html.erb
+++ b/app/views/components/index.html.erb
@@ -1,6 +1,8 @@
 <h1>Components</h1>
 
-<table>
+<%= link_to 'New Component', new_component_path %>
+
+<table class="table">
   <thead>
     <tr>
       <th></th>
@@ -25,6 +27,3 @@
   </tbody>
 </table>
 
-<br>
-
-<%= link_to 'New Component', new_component_path %>
