--- a/app/views/prices/show.html.erb
+++ b/app/views/prices/show.html.erb
@@ -3,7 +3,7 @@
 
 <p>
   <strong>Component:</strong>
-  <%= @price.component %> (<%= @price.component.manufacturer %>)
+  <%= display_component(@price.component) %>
 </p>
 
 <p>
