Add components to products

--- a/app/views/components/show.html.erb
+++ b/app/views/components/show.html.erb
@@ -17,6 +17,7 @@
 </p>
 
 <p><strong>Prices</strong></p>
+<%= link_to 'New Price', new_price_path %>
 <table class="table">
   <tr>
     <th>Qty</th>
