--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,8 @@
     <nav>
       <%= link_to "Manufacturers", manufacturers_path %> |
       <%= link_to "Components", components_path %> |
-      <%= link_to "Prices", prices_path %>
+      <%= link_to "Prices", prices_path %> |
+      <%= link_to "Products", products_path %>
     </nav>
 
     <div class="container">
