--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -5,24 +5,27 @@
 <table class="table">
   <thead>
     <tr>
-      <th>Name</th>
+      <th>Product</th>
       <th>MSRP</th>
       <th>Qty</th>
+      <th>Cost Ea.</th>
       <th>Profit</th>
-      <th colspan="3">Actions</th>
     </tr>
   </thead>
 
   <tbody>
-    <% @products.each do |product| %>
+    <% @products.order('qty DESC').each do |product| %>
       <tr>
-        <td><%= product.name %></td>
+        <td>
+          <strong><%= link_to product.name, product_path(product) %></strong>
+          <% product.components.each do |component| %>
+            <li><%= display_component(component) %></li>
+          <% end %>
+        </td>
         <td><%= product.msrp %></td>
         <td><%= product.qty %></td>
+        <td><%= display_currency(product.cost_each) %></td>
         <td><%= display_currency(product.profit) %></td>
-        <td><%= link_to 'Show', product %></td>
-        <td><%= link_to 'Edit', edit_product_path(product) %></td>
-        <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
