Moves destroy action to edit page

--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -2,5 +2,6 @@
 
 <%= render 'form', product: @product %>
 
-<%= link_to 'Show', @product %> |
-<%= link_to 'Back', products_path %>
+<%= link_to 'Cancel', products_path %> |
+<%= link_to 'Destroy', @product, method: :delete, data: { confirm: 'Are you sure?' } %>
+
