Adds total cost

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -14,6 +14,11 @@
 </p>
 
 <p>
+  <strong>Cost Each:</strong>
+  <%= display_currency(@product.cost_each) %>
+</p>
+
+<p>
   <strong>Total Cost:</strong>
   <%= display_currency(@product.total_cost) %>
 </p>
