--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -15,7 +15,7 @@
 
 <p>
   <strong>Cost Each:</strong>
-  <%= display_currency(@product.cost_each) %>
+  <%= display_currency(@product.unit_cost) %>
 </p>
 
 <p>
@@ -25,7 +25,7 @@
 
 <p>
   <strong>Profit:</strong>
-  <%= display_currency(@product.profit) %>
+  <%= display_currency(@product.total_profit) %>
 </p>
 
 
