--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,7 +1,4 @@
-<p>
-  <strong>Name:</strong>
-  <%= @product.name %>
-</p>
+<h1><%= @product.name %></h1>
 
 <p>
   <strong>MSRP:</strong>
@@ -29,9 +26,7 @@
 </p>
 
 
-<p>
-  <strong>Components:</strong>
-</p>
+<h2>Components:</h2>
 
 <table class="table">
   <tr>
