Creates global msrp and local msrp flexibility

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,8 @@
       <%= link_to "Manufacturers", manufacturers_path %> |
       <%= link_to "Components", components_path %> |
       <%= link_to "Prices", prices_path %> |
-      <%= link_to "Products", products_path %>
+      <%= link_to "Products", products_path %> |
+      <%= link_to "Set Global MSRP", global_msrp_path(GlobalMsrp.first) %>
     </nav>
 
     <div class="container">
