--- a/app/views/global_msrps/_form.html.erb
+++ b/app/views/global_msrps/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="field">
     <%= f.label :price %>
-    <%= f.text_field :price %>
+    <%= f.text_field :price, class: 'form-control' %>
   </div>
 
   <div class="actions">
