Removes msrp show page

--- a/app/views/global_msrps/edit.html.erb
+++ b/app/views/global_msrps/edit.html.erb
@@ -1,5 +1,5 @@
-<h1>Editing Global Msrp</h1>
+<h1>Global MSRP</h1>
 
 <%= render 'form', global_msrp: @global_msrp %>
 
-<%= link_to 'Show', @global_msrp %>
+<%= link_to 'Cancel', root_path %>
