--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
       <%= link_to "Components", components_path %> |
       <%= link_to "Prices", prices_path %> |
       <%= link_to "Products", products_path %> |
-      <%= link_to "Set Global MSRP", global_msrp_path(global_msrp) %>
+      <%= link_to "Set Global MSRP", edit_global_msrp_path(global_msrp) %>
     </nav>
 
     <div class="container">
