--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -17,7 +17,7 @@
   </div>
 
   <div class="field">
-    <%= f.label :local_msrp, "Override Global MSRP (currently $#{global_msrp.price})" %>
+    <%= f.label :local_msrp, "Override Global MSRP (currently $#{global_msrp_price})" %>
     <%= f.text_field :local_msrp, class: 'form-control' %>
   </div>
 
